--- a/src/App.css
+++ b/src/App.css
@@ -1,22 +1,35 @@
+html, body {
+  margin: 0px;
+  padding: 0px;
+}
+
+.App {
+  font-family: 'Roboto', sans-serif;
+  box-sizing: border-box;
+}
+
 .ToDo {
-  position: absolute;
-  margin: auto;
   width: fit-content;
-  height: 300px;
-  top: 100px;
-  bottom: auto;
-  left: 0;
-  right: 0;
+  border: 1px solid black;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 
 .ToDoContainer {
   border: 1px solid black;
-  border-radius: 10px;
   display: flex;
   flex-direction: column;
   min-height: 300px;
   max-height: 300px;
-  overflow:auto;
+  overflow: auto;
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
 }
 
 .ToDoHeader {
@@ -42,6 +55,10 @@
 .ToDoRow {
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+.ToDoItem {
+  
 }
 
 .EntryBar {
