--- a/src/App.css
+++ b/src/App.css
@@ -12,10 +12,11 @@ html, body {
   box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 2em auto;
+  grid-template-rows: 2em 2em auto;
 }
 
 .ToDoContainer {
+  grid-row: 3/ span 1;
   grid-column: 1 / -1;
   display: flex;
   flex-direction: column;
@@ -38,8 +39,10 @@ html, body {
 }
 
 .EntryBar {
+  grid-row: 2 / span 1;
+  grid-column: 1 / -1;
   display: grid;
-  grid-template-columns: auto auto;
+  grid-template-columns: auto 2em;
 }
 
 .ToDoRow, .EntryBar {
