--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+* {
+  box-sizing: border-box;
+}
+
 html, body {
   margin: 0px;
   padding: 0px;
+  background-color: #000;
 }
 
 .App {
@@ -9,7 +14,6 @@ html, body {
 
 .ToDo {
   height: 100vh;
-  box-sizing: border-box;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
   grid-template-rows: 2em 2em auto;
@@ -21,6 +25,7 @@ html, body {
   display: flex;
   flex-direction: column;
   overflow: auto;
+  background-color: #fff;
 }
 
 ::-webkit-scrollbar {
@@ -32,9 +37,12 @@ html, body {
 }
 
 .ToDoHeader {
-  margin-top: 5px;
-  align-self: center;
-  text-align: center;
+  background-color: #000;
+  color: #eee;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
   grid-column: 1 / -1;
 }
 
@@ -46,9 +54,6 @@ html, body {
 }
 
 .ToDoRow, .EntryBar {
-  margin-left: 10px;
-  margin-right: 10px;
-  padding: 5px;
   min-height: initial;
   flex: 0 0 auto;
 }
@@ -56,8 +61,10 @@ html, body {
 .ToDoRow {
   display: grid;
   grid-template-columns: 2em auto;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 0.5em;
+  margin-bottom: 0.5em;
+  margin-left: 1em;
+  margin-right: 1em;
   align-self: flex-start;
 }
 
@@ -73,8 +80,19 @@ html, body {
 
 .Input {
   grid-column: 1 / span 1;
+  font-size: 1em;
 }
 
 .AddButton {
   grid-column: 2 / span 1;
+}
+
+.AddButton > button {
+  width: 100%;
+  height: 100%;
+}
+
+.DeleteButton > button {
+  width: 2em;
+  height: 2em;
 }
