--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ html, body {
   height: 100vh;
   display: grid;
   grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: 2em 2em auto;
+  grid-template-rows: 2em 4em auto;
 }
 
 .ToDoContainer {
@@ -80,7 +80,7 @@ html, body {
 
 .Input {
   grid-column: 1 / span 1;
-  font-size: 1em;
+  font: inherit;
 }
 
 .AddButton {
@@ -94,5 +94,4 @@ html, body {
 
 .DeleteButton > button {
   width: 2em;
-  height: 2em;
 }
